commiting fix for sending tournament stuff and bracket showing, along with changes to most pages for the info icon, along with some small fixes here and there

--- a/main/BitBracket/src/BitBracket/Views/Home/Search.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Search.cshtml
@@ -5,15 +5,11 @@
 </head>
 <body class="announcement-background">
     <h1 class="title-styling">Search
-        <button id="myBtn">i</button>
+        <a class="ui icon small">
+            <i class="info circle icon large inverted announcement-background" data-content="Welcome to our search page! Here you can search for users and tournaments!" data-position="top center"></i>
+        </a>
     </h1>
-    <div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Welcome to the search page, where you can search for users and tournaments!</p>
-        </div>
-    </div>
+    
     <div class="section-gap"></div>
     <div class="section-gap"></div>
     <div class="search-bar" style="text-align: center;">
