--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -5,7 +5,11 @@
 }
 
 <body class="announcement-background">
-<h1 class="title-styling">Admin Announcements</h1>
+<h1 class="title-styling">Admin Announcements
+        <a class="ui icon small">
+            <i class="info circle icon large inverted announcement-background" data-content="Welcome to your create announcements page, where you can create an announcement as save it as a draft, or publish it right away!" data-position="top center"></i>
+        </a>
+</h1>
     <div class="ui container center aligned">
         <div class="announcement-container">
 
@@ -28,5 +32,7 @@
 
 @section Scripts {
     <script src="~/js/announcementForm.js"></script> 
+        <script src="~/js/modalswitcher.js"></script>
+
 }
 
