--- a/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
@@ -11,14 +11,11 @@
 <body class="announcement-background">
     <div class="ui container">
         <h1 class="title-styling">Welcome to @Model.Username's profile page!
-            <button id="myBtn">i</button>
+            <a class="ui icon">
+                <i class="info circle icon large inverted announcement-background" data-content="Welcome to another users profile page! Here you can view their profile details along with being able to send them a friend request." data-position="top center"></i>
+            </a>
         </h1>
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Welcome to another users profile page! Here you can view their profile details along with being able to send them a friend request.</p>
-            </div>
-        </div>
+
 
         <div class="ui very padded segment">
             <div class="ui divided items">
