--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
@@ -11,16 +11,11 @@
 <div class="ui container">
     <div>
     <h1 class="title-styling">@ViewData["Title"]
-        <button id="myBtn">i</button>
+            <a class="ui icon small">
+                <i class="info circle icon large inverted announcement-background" data-content="Welcome to your create announcements page, where you can create an announcement as save it as a draft, or publish it right away!" data-position="top center"></i>
+            </a>
     </h1>
-    <div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-                <p>Welcome to your create announcements page, where you can create an announcement as save it as a draft, or publish it right away!</p>
 
-        </div>
-    </div>
     @Html.Partial("~/Views/Announcements/_UserAnnouncementCreate.cshtml")
 </div>
 
