--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentPage.cshtml
@@ -89,15 +89,11 @@
     </button>
     <h1 class="title-styling">
         Tournament Page
-        <button id="myBtn">i</button>
+        <a class="ui icon small">
+            <i class="info circle icon large inverted announcement-background" data-content="Welcome to the tournament page, where you can create a new bracket, set a broadcast link, and manage participation requests! You can also view your created brackets and see them in more detail there."></i>
+        </a>
     </h1>
-    
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Welcome to the tournament page, where you can create a new bracket, set a broadcast link, and manage participation requests! You can also view your created brackets and see them in more detail there.</p>
-        </div>
-    </div>
+
     
     <div class="ui container mb-3">
         <div class="ui segment">
