--- a/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Bracket/TournamentDashboard.cshtml
@@ -17,15 +17,12 @@
 </head>
 <body class="announcement-background">
     <h1 class="title-styling">Tournament Dashboard
-        <button id="myBtn">i</button>
+        <a class="ui icon small">
+            <i class="info circle icon large inverted announcement-background" data-content="Welcome to the tournament dashboard! From here, you can create a new tournament, view all the tournaments you have created, and go to your tournaments to manage them in detail.
+" data-position="top center"></i>
+        </a>
     </h1>
-<div id="myModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Welcome to the tournament dashboard! From here, you can create a new tournament, view all the tournaments you have created, and go to your tournaments to manage them in detail.</p>
-        </div>
-</div>
+
 
     <!-- Button to open the tournament creation form -->
     <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#tournamentModal">
