Adding Credits and Fixing some warnings

--- a/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/Announcement.cshtml
@@ -23,7 +23,7 @@
             <div class="section-gap"></div>
             
             <section>
-                @await Html.PartialAsync("~/Views/Announcements/_AnnouncementsPartial.cshtml")
+                <partial name="~/Views/Announcements/_AnnouncementsPartial.cshtml" />
             </section>
             
         </div>
