--- a/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/AnnouncementCreate.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <section class="section-gap">
-            @await Html.PartialAsync("~/Views/Announcements/_CreateAnnouncementPartial.cshtml")
+            <partial name="~/Views/Announcements/_CreateAnnouncementPartial.cshtml" />
         </section>
 
         @* <a href="@Url.Action("Announcement", "Home")" class="ui button secondary">Return to Announcement Page</a> *@
