--- a/main/BitBracket/src/BitBracket/Views/Home/ManageAnnouncement.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/ManageAnnouncement.cshtml
@@ -18,7 +18,7 @@
     </div>
 </div>
 
-@Html.Partial("~/Views/Announcements/_ManageAnnouncement.cshtml")
+<partial name="~/Views/Announcements/_ManageAnnouncement.cshtml" />
 
 @section Scripts {
     <script src="~/js/manageAnnouncement.js"></script>
