--- a/main/BitBracket/src/BitBracket/Views/Home/OptInConfirmation.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/OptInConfirmation.cshtml
@@ -11,7 +11,7 @@
 
 <div class="section-gap"></div>
 
-@Html.Partial("~/Views/Announcements/_OptInConfirmation.cshtml")
+<partial name="~/Views/Announcements/_OptInConfirmation.cshtml" />
 
 @section Scripts {
     <script src="~/js/optInConfirmation.js"></script>
