--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementCreate.cshtml
@@ -16,7 +16,7 @@
             </a>
     </h1>
 
-    @Html.Partial("~/Views/Announcements/_UserAnnouncementCreate.cshtml")
+    <partial name="~/Views/Announcements/_UserAnnouncementCreate.cshtml" />
 </div>
 
     @* <a href="@Url.Action("UserAnnouncementForm", "Home")" class="ui button secondary">Return to Announcement Page</a> *@
