--- a/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementForm.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/UserAnnouncementForm.cshtml
@@ -23,7 +23,7 @@
 
 <div class="section-gap"></div>
 
-@Html.Partial("~/Views/Announcements/_UserAnnouncementForm.cshtml")
+<partial name="~/Views/Announcements/_UserAnnouncementForm.cshtml" />
 
 @section Scripts {
     <script src="~/js/userAnnouncementForm.js"></script>
