commiting diagrams, readme for secrets, and cleaned up and down script

--- a/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
+++ b/main/BitBracket/src/BitBracket/Views/Home/SearchProfiles.cshtml
@@ -11,9 +11,7 @@
 <body class="announcement-background">
     <div class="ui container">
         <h1 class="title-styling">Welcome to @Model.Username's profile page!
-            <a class="ui icon">
-                <i class="info circle icon large inverted announcement-background" data-content="Welcome to another users profile page! Here you can view their profile details along with being able to send them a friend request." data-position="top center"></i>
-            </a>
+            <button id="myBtn">i</button>
         </h1>
 
 
